@@ -12,7 +12,7 @@ zinc64 was started as an exercise to learn Rust and explore Commodore 64 hardwar
 
 I have been following Rust development for a while and since it has reached its first stability milestone, version 1.0 back in May 2015, I have been meaning to write something more substantial with it. Exploring Rust and its features is really the second driver behind this emulator. Coming from Scala background, a lot of concepts and features in Rust felt right at home. Things like type inference, immutable by default, traits, ADTs, pattern matching all contribute to writing code that parallels many of the things I've done in Scala. The biggest departure between the two languages is quite obviously memory management. While ownership/borrowing is not conceptually hard, it takes a bit of practice to fully appreciate its application in the code base.
 
-Overall, my impression of Rust is that it provides wonderful ergonomics for the developer while blending performance that only low-level languages provide with safety of a high level language (typically garbage collected one). While the language ecosystem may still be young and some libraries (futures/asyncio) need a bit more time to mature, the language already delivers a major productivity boost. The experience I had with it while writing code for the emulator can be largely summarized as "if it compiles, it works". Very impressive, big props to Rust folks for pulling off an excellent development platform.
+Overall, my impression of Rust is that it provides wonderful ergonomics for the developer while blending performance that only low-level languages provide with safety of a high level language (typically garbage collected one). While the language ecosystem may still be young and some libraries (futures/asyncio) need a bit more time to mature, the language already delivers a major productivity boost. The experience I had with it while writing code for the emulator can be largely summarized as "if it compiles, it works" (except for pieces that didn't ;). Very impressive, big props to Rust folks for pulling off an excellent development platform.
 
 ## Getting Started
 
