@@ -18,5 +18,8 @@
  */
 
 mod sid;
+mod sound_buffer;
 
 pub use self::sid::Sid;
+pub use self::sound_buffer::SoundBuffer;
+
